--- a/EtAlii.BinanceMagic.Service/Pages/Index.razor
+++ b/EtAlii.BinanceMagic.Service/Pages/Index.razor
@@ -1,5 +1,52 @@
 ﻿@page "/"
 
+@using EtAlii.BinanceMagic.Service.Data
+@inject WeatherForecastService _forecastService
+@inject AlgorithmRunnerService _algorithmRunnerService
+
+<ul class="nav nav-tabs">
+@foreach (var experiment in _experiments)
+{
+    <li class="nav-item">
+        <a class="nav-link @(experiment.IsActive ? "active" : "")" href="#" @onclick="@(() => SelectExperiment(experiment.Name))">@experiment.Name</a>
+    </li>
+}
+</ul>
+        
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?"/>
+
+<p>Current count: @_currentCount</p>
+
+@if (_forecasts == null)
+{
+    <p>
+        <em>Loading...</em>
+    </p>
+}
+else
+{
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Date</th>
+            <th>Temp. (C)</th>
+            <th>Temp. (F)</th>
+            <th>Summary</th>
+        </tr>
+        </thead>
+        <tbody>
+        @foreach (var forecast in _forecasts)
+        {
+            <tr>
+                <td>@forecast.Date.ToShortDateString()</td>
+                <td>@forecast.TemperatureC</td>
+                <td>@forecast.TemperatureF</td>
+                <td>@forecast.Summary</td>
+            </tr>
+        }
+        </tbody>
+    </table>
+
+}
