--- a/EtAlii.BinanceMagic.Service/Shared/Transaction.razor
+++ b/EtAlii.BinanceMagic.Service/Shared/Transaction.razor
@@ -1,10 +1,38 @@
 ﻿<div class="alert alert-secondary mt-4" role="alert">
     <span class="oi oi-clock mr-2" aria-hidden="true"></span>
     <strong>@Title</strong>
-
-    <span class="text-nowrap">
-        Please take our
-        <a target="_blank" class="font-weight-bold" href="https://go.microsoft.com/fwlink/?linkid=2137813">brief survey</a>
-    </span>
-    and tell us what you think.
+        <table class="table">
+            <tbody>
+                <tr>
+                    <td>Sell: </td><td>@Sell</td>
+                    <td>Quantity: </td><td>@SellQuantity</td>
+                    <td>Trend: </td><td>@SellTrend</td>
+                </tr>
+                <tr>
+                    <td>Buy: </td><td>@Buy</td>
+                    <td>Quantity: </td><td>@BuyQuantity</td>
+                    <td>Trend: </td><td>@BuyTrend</td>
+                </tr>
+                <tr>
+                    <td>Diff: </td><td>@Diff</td>
+                    <td>Target: </td><td>@Target</td>
+                    <td></td><td></td>
+                </tr>
+                <tr>
+                    <td>Last success: </td><td>@LastSuccess</td>
+                    <td>Profit:</td><td>@Profit</td>
+                    <td></td><td></td>
+                </tr>
+                <tr>
+                    <td>Last check: </td><td>@LastCheck</td>
+                    <td>Result:</td><td>@Result</td>
+                    <td></td><td></td>
+                </tr>
+                <tr>
+                    <td>Next check: </td><td>@NextCheck</td>
+                    <td>Step:</td><td>@Step</td>
+                    <td></td><td></td>
+                </tr>
+            </tbody>
+        </table>
 </div>
