--- a/EtAlii.BinanceMagic.Service/Pages/Index.razor
+++ b/EtAlii.BinanceMagic.Service/Pages/Index.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
 
 @using EtAlii.BinanceMagic.Service.Data
-@inject WeatherForecastService _forecastService
 @inject AlgorithmRunnerService _algorithmRunnerService
 
 <ul class="nav nav-tabs">
@@ -12,14 +11,8 @@
     </li>
 }
 </ul>
-        
-Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?"/>
-
-<p>Current count: @_currentCount</p>
-
-@if (_forecasts == null)
+@if (_currentExperiment == null)
 {
     <p>
         <em>Loading...</em>
@@ -27,26 +20,33 @@ Welcome to your new app.
 }
 else
 {
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
-        </tr>
-        </thead>
-        <tbody>
-        @foreach (var forecast in _forecasts)
-        {
-            <tr>
-                <td>@forecast.Date.ToShortDateString()</td>
-                <td>@forecast.TemperatureC</td>
-                <td>@forecast.TemperatureF</td>
-                <td>@forecast.Summary</td>
-            </tr>
-        }
-        </tbody>
-    </table>
+    <Transaction Title="Current experiment"/>
 
+    @foreach (var _ in _currentExperiment.Steps.Skip(1))
+    {
+        <Transaction Title="How is Blazor working for you?"/>
+    }
 }
+@* { *@
+@*      *@
+@*     <table class="table"> *@
+@*         <thead> *@
+@*         <tr> *@
+@*             <th>Date</th> *@
+@*             <th>Temp. (C)</th> *@
+@*             <th>Temp. (F)</th> *@
+@*             <th>Summary</th> *@
+@*         </tr> *@
+@*         </thead> *@
+@*         <tbody> *@
+@*         @foreach (var forecast in _forecasts) *@
+@*         { *@
+@*             <tr> *@
+@*                 <td>@forecast.Date.ToShortDateString()</td> *@
+@*                 <td>@forecast.TemperatureC</td> *@
+@*                 <td>@forecast.TemperatureF</td> *@
+@*                 <td>@forecast.Summary</td> *@
+@*             </tr> *@
+@*         } *@
+@*         </tbody> *@
+@*     </table> *@
