--- a/EtAlii.BinanceMagic.Service/Shared/MainLayout.razor
+++ b/EtAlii.BinanceMagic.Service/Shared/MainLayout.razor
@@ -1,9 +1,13 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
+    <div class="sidebar">
+        <NavMenu/>
+    </div>
+
     <div class="main">
         <div class="top-row px-4 auth">
-            <h1>Binance Magic</h1>
+            <h1></h1>
         </div>
         <div class="content px-4">
             @Body
