--- a/EtAlii.BinanceMagic.Service/Shared/MainLayout.razor
+++ b/EtAlii.BinanceMagic.Service/Shared/MainLayout.razor
@@ -6,8 +6,18 @@
     </div>
 
     <div class="main">
-        <div class="top-row px-4 auth">
-            <h1></h1>
+        <div class="top-row px-4">
+
+            <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+                    <span class="caret"></span></button>
+                <ul class="dropdown-menu">
+                    <li><a href="#">HTML</a></li>
+                    <li><a href="#">CSS</a></li>
+                    <li><a href="#">JavaScript</a></li>
+                </ul>
+            </div>
+            
         </div>
         <div class="content px-4">
             @Body
