--- a/EtAlii.BinanceMagic.Service/Shared/NavMenu.razor
+++ b/EtAlii.BinanceMagic.Service/Shared/NavMenu.razor
@@ -8,8 +8,18 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-graph" aria-hidden="true"></span> Experiments
+            <NavLink class="nav-link" href="simple" Match="NavLinkMatch.All">
+                <span class="oi oi-graph" aria-hidden="true"></span> Simple trading
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="circular" Match="NavLinkMatch.All">
+                <span class="oi oi-loop-circular" aria-hidden="true"></span> Circular trading
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="experiments" Match="NavLinkMatch.All">
+                <span class="oi oi-beaker" aria-hidden="true"></span> Experiments
             </NavLink>
         </li>
         <li class="nav-item px-3">
