--- a/EtAlii.BinanceMagic.Service/Pages/SimpleEdit.razor
+++ b/EtAlii.BinanceMagic.Service/Pages/SimpleEdit.razor
@@ -1,4 +1,4 @@
-﻿@page "/circular/edit/{id?}"
+﻿@page "/simple/edit/{id?}"
 
 @using EtAlii.BinanceMagic.Service.Data
 @inject AlgorithmRunnerService _algorithmRunnerService
