--- a/EtAlii.BinanceMagic.Service/Pages/SimpleView.razor
+++ b/EtAlii.BinanceMagic.Service/Pages/SimpleView.razor
@@ -1,4 +1,4 @@
-﻿@page "/circular"
+﻿@page "/simple/view/{id?}"
 
 @using EtAlii.BinanceMagic.Service.Data
 @inject AlgorithmRunnerService _algorithmRunnerService
