--- a/EtAlii.BinanceMagic.Service/_Imports.razor
+++ b/EtAlii.BinanceMagic.Service/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using EtAlii.BinanceMagic.Service
 @using EtAlii.BinanceMagic.Service.Shared
+
+@using Blazorise
+@* @using Blazorise.Bootstrap *@
+@using Blazorise.Charts
+@using Blazorise.Sidebar
