--- a/EtAlii.BinanceMagic.Service/Pages/_Host.cshtml
+++ b/EtAlii.BinanceMagic.Service/Pages/_Host.cshtml
@@ -12,23 +12,38 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Binance Magic</title>
         <base href="~/"/>
-        <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
+        
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+
+        <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
+        <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />
+        <link href="_content/Blazorise.DataGrid/blazorise.datagrid.css" rel="stylesheet" />
+        <link href="_content/Blazorise.Sidebar/blazorise.sidebar.css" rel="stylesheet" />
+        <link href="_content/Blazorise.Snackbar/blazorise.snackbar.css" rel="stylesheet" />
+        <link href="_content/Blazorise.TreeView/blazorise.treeview.css" rel="stylesheet" />
+        
         <link href="css/site.css" rel="stylesheet"/>
         <link href="EtAlii.BinanceMagic.Service.styles.css" rel="stylesheet"/>
     </head>
     <body>
-        <component type="typeof(App)" render-mode="ServerPrerendered"/>
+    <app>@(await Html.RenderComponentAsync<App>( RenderMode.Server ))</app>
+    
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-        <div id="blazor-error-ui">
-            <environment include="Staging,Production">
-                An error has occurred. This application may no longer respond until reloaded.
-            </environment>
-            <environment include="Development">
-                An unhandled exception has occurred. See browser dev tools for details.
-            </environment>
-            <a href="" class="reload">Reload</a>
-            <a class="dismiss">🗙</a>
-        </div>
+        <!-- EXTENSIONS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-streaming@latest/dist/chartjs-plugin-streaming.min.js"></script>
+
+        <script src="_content/Blazorise/blazorise.js"></script>
+        <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
+        <script src="_content/Blazorise.Charts/blazorise.charts.js"></script>
+        <script src="_content/Blazorise.Charts.Streaming/blazorise.charts.streaming.js"></script>
+        <script src="_content/Blazorise.Animate/blazorise.animate.js"></script>
+        <script src="_content/Blazorise.DataGrid/blazorise.datagrid.js"></script>
 
         <script src="_framework/blazor.server.js"></script>
     </body>
