--- a/EtAlii.BinanceMagic.Service/Shared/Transaction.razor
+++ b/EtAlii.BinanceMagic.Service/Shared/Transaction.razor
@@ -1,38 +1,41 @@
-﻿<div class="alert alert-secondary mt-4" role="alert">
-    <span class="oi oi-clock mr-2" aria-hidden="true"></span>
+﻿
+<Card Color="Color.Secondary">
+    <Icon Name="IconName.Clock" />    
+@* <div class="alert alert-secondary mt-4" role="alert"> *@
+@*     <span class="oi oi-clock mr-2" aria-hidden="true"></span> *@
     <strong>@Title</strong>
-        <table class="table">
-            <tbody>
-                <tr>
-                    <td>Sell: </td><td>@Sell</td>
-                    <td>Quantity: </td><td>@SellQuantity</td>
-                    <td>Trend: </td><td>@SellTrend</td>
-                </tr>
-                <tr>
-                    <td>Buy: </td><td>@Buy</td>
-                    <td>Quantity: </td><td>@BuyQuantity</td>
-                    <td>Trend: </td><td>@BuyTrend</td>
-                </tr>
-                <tr>
-                    <td>Diff: </td><td>@Diff</td>
-                    <td>Target: </td><td>@Target</td>
-                    <td></td><td></td>
-                </tr>
-                <tr>
-                    <td>Last success: </td><td>@LastSuccess</td>
-                    <td>Profit:</td><td>@Profit</td>
-                    <td></td><td></td>
-                </tr>
-                <tr>
-                    <td>Last check: </td><td>@LastCheck</td>
-                    <td>Result:</td><td>@Result</td>
-                    <td></td><td></td>
-                </tr>
-                <tr>
-                    <td>Next check: </td><td>@NextCheck</td>
-                    <td>Step:</td><td>@Step</td>
-                    <td></td><td></td>
-                </tr>
-            </tbody>
-        </table>
-</div>
+    <Table>
+        <TableBody>
+            <TableRow>
+                <TableRowCell>Sell: </TableRowCell><TableRowCell>@Sell</TableRowCell>
+                <TableRowCell>Quantity: </TableRowCell><TableRowCell>@SellQuantity</TableRowCell>
+                <TableRowCell>Trend: </TableRowCell><TableRowCell>@SellTrend</TableRowCell>
+            </TableRow>
+            <TableRow>
+                <TableRowCell>Buy: </TableRowCell><TableRowCell>@Buy</TableRowCell>
+                <TableRowCell>Quantity: </TableRowCell><TableRowCell>@BuyQuantity</TableRowCell>
+                <TableRowCell>Trend: </TableRowCell><TableRowCell>@BuyTrend</TableRowCell>
+            </TableRow>
+            <TableRow>
+                <TableRowCell>Diff: </TableRowCell><TableRowCell>@Diff</TableRowCell>
+                <TableRowCell>Target: </TableRowCell><TableRowCell>@Target</TableRowCell>
+                <TableRowCell></TableRowCell><TableRowCell></TableRowCell>
+            </TableRow>
+            <TableRow>
+                <TableRowCell>Last success: </TableRowCell><TableRowCell>@LastSuccess</TableRowCell>
+                <TableRowCell>Profit:</TableRowCell><TableRowCell>@Profit</TableRowCell>
+                <TableRowCell></TableRowCell><TableRowCell></TableRowCell>
+            </TableRow>
+            <TableRow>
+                <TableRowCell>Last check: </TableRowCell><TableRowCell>@LastCheck</TableRowCell>
+                <TableRowCell>Result:</TableRowCell><TableRowCell>@Result</TableRowCell>
+                <TableRowCell></TableRowCell><TableRowCell></TableRowCell>
+            </TableRow>
+            <TableRow>
+                <TableRowCell>Next check: </TableRowCell><TableRowCell>@NextCheck</TableRowCell>
+                <TableRowCell>Step:</TableRowCell><TableRowCell>@Step</TableRowCell>
+                <TableRowCell></TableRowCell><TableRowCell></TableRowCell>
+            </TableRow>
+        </TableBody>
+    </Table>
+</Card>
