Restructured service project.

--- a/EtAlii.BinanceMagic.Service/Shared/Error.cshtml
+++ b/EtAlii.BinanceMagic.Service/Shared/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EtAlii.BinanceMagic.Service.Pages.ErrorModel
+@model EtAlii.BinanceMagic.Service.Shared.ErrorModel
 
 <!DOCTYPE html>
 <html lang="en">
