--- a/EtAlii.BinanceMagic.Service/Shared/Index.razor
+++ b/EtAlii.BinanceMagic.Service/Shared/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-@using EtAlii.BinanceMagic.Service.Data
-@inject AlgorithmRunnerService _algorithmRunnerService
+@using EtAlii.BinanceMagic.Service.Trading
+@inject AlgorithmManager _algorithmManager
 
 
 <Card>
