--- a/EtAlii.BinanceMagic.Service/Shared/_Host.cshtml
+++ b/EtAlii.BinanceMagic.Service/Shared/_Host.cshtml
@@ -23,8 +23,7 @@
         <link href="_content/Blazorise.Snackbar/blazorise.snackbar.css" rel="stylesheet" />
         <link href="_content/Blazorise.TreeView/blazorise.treeview.css" rel="stylesheet" />
         
-        <link href="css/site.css" rel="stylesheet"/>
-        <link href="EtAlii.BinanceMagic.Service.styles.css" rel="stylesheet"/>
+        <link href="site.css" rel="stylesheet"/>
     </head>
     <body>
     <app>@(await Html.RenderComponentAsync<App>( RenderMode.Server ))</app>
