--- a/EtAlii.BinanceMagic.Service/Trading/Simple/SimpleEdit.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Simple/SimpleEdit.razor
@@ -1,6 +1,6 @@
 ﻿@page "/simple/edit/{id?}"
 
-@inject AlgorithmRunnerService _algorithmRunnerService
+@inject AlgorithmManager _algorithmManager
 @inject NavigationManager _navigationManager
 
 @inject IJSRuntime _jsRuntime;
