--- a/EtAlii.BinanceMagic.Service/Trading/Circular/CircularEdit.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Circular/CircularEdit.razor
@@ -1,6 +1,6 @@
 ﻿@page "/circular/edit/{id?}"
 
-@inject AlgorithmRunnerService _algorithmRunnerService
+@inject AlgorithmManager _algorithmManager
 @inject NavigationManager _navigationManager
 
 @inject IJSRuntime _jsRuntime;
