Improved Circular edit page

--- a/EtAlii.BinanceMagic.Service/_Imports.razor
+++ b/EtAlii.BinanceMagic.Service/_Imports.razor
@@ -10,6 +10,12 @@
 @using EtAlii.BinanceMagic.Service.Shared
 
 @using Blazorise
-@* @using Blazorise.Bootstrap *@
 @using Blazorise.Charts
+@using Blazorise.Charts.Streaming
+@using Blazorise.DataGrid
 @using Blazorise.Sidebar
+@using Blazorise.Snackbar
+@* @using Blazorise.TreeView *@
+@* @using Blazorise.RichTextEdit *@
+@using Blazorise.Components
+@using Blazorise.Animate
