--- a/EtAlii.BinanceMagic.Service/Configuration/Settings.razor
+++ b/EtAlii.BinanceMagic.Service/Configuration/Settings.razor
@@ -2,29 +2,62 @@
 
 @inject IJSRuntime _jsRuntime;
 
-<div class="card m-2">
-    <h4 class="card-header">General settings</h4>
-    <div class="card-body">
-        <EditForm EditContext="@_editContext" OnValidSubmit="HandleValidSubmit" @onreset="HandleReset">
-            <DataAnnotationsValidator />
-            <div class="form-row">
-                <div class="form-group col-5">
-                    <label>API Key</label>
-                    <InputText @bind-Value="_model.ApiKey" class="form-control" />
-                    <ValidationMessage For="@(() => _model.ApiKey)" />
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="form-group col-5">
-                    <label>Secret key</label>
-                    <InputText @bind-Value="_model.SecretKey" class="form-control" />
-                    <ValidationMessage For="@(() => _model.SecretKey)" />
-                </div>
-            </div>
-            <div class="text-l-center">
-                <button type="submit" class="btn btn-primary mr-1">Save</button>
-                @* <button type="reset" class="btn btn-secondary">Cancel</button> *@
-            </div>
-        </EditForm>
-    </div>
-</div>
+<Validations @ref="_validations" Mode="ValidationMode.Auto" ValidateOnLoad="false" EditContext="@_editContext">
+<Row>
+    <Column ColumnSize="ColumnSize.IsFull.OnMobile.IsHalf.OnTablet">
+        <Card Margin="Margin.Is4">
+            <CardHeader>
+                <CardTitle>General settings</CardTitle>
+            </CardHeader>
+                <CardBody>
+
+                    <Validation Validator="@ValidationRule.IsNotEmpty">
+                        <Field ColumnSize="ColumnSize.IsHalf.OnTablet.IsFull.OnMobile">
+                            <FieldLabel>API key</FieldLabel>
+                            <TextEdit 
+                                Placeholder="Key" 
+                                Autofocus="true"
+                                @bind-Text="@_model.ApiKey">
+                                <Feedback>
+                                    <ValidationError>Enter Binance API key.</ValidationError>
+                                </Feedback>                            
+                            </TextEdit>
+                        </Field>
+                    </Validation>
+
+                    <Validation Validator="@ValidationRule.IsNotEmpty">
+                        <Field ColumnSize="ColumnSize.IsHalf.OnTablet.IsFull.OnMobile">
+                            <FieldLabel>Secret key</FieldLabel>
+                            <TextEdit 
+                                Placeholder="Key" 
+                                Autofocus="true"
+                                @bind-Text="@_model.SecretKey">
+                                <Feedback>
+                                    <ValidationError>Enter Binance secret key.</ValidationError>
+                                </Feedback>                            
+                            </TextEdit>
+                        </Field>
+                    </Validation>
+
+                    <Validation Validator="@ValidationRule.IsNotEmpty">
+                        <Field ColumnSize="ColumnSize.IsHalf.OnTablet.IsFull.OnMobile">
+                            <FieldLabel>Reference symbol</FieldLabel>
+                            <TextEdit 
+                                Placeholder="Symbol" 
+                                Autofocus="true"
+                                @bind-Text="@_model.ReferenceSymbol">
+                                <Feedback>
+                                    <ValidationError>Enter reference symbol.</ValidationError>
+                                </Feedback>                            
+                            </TextEdit>
+                        </Field>
+                    </Validation>
+                    
+                    <Field ColumnSize="ColumnSize.IsHalf.OnTablet.IsHalf.OnMobile">
+                        <Button Color="Color.Primary" Clicked="@Submit">Save</Button>
+                    </Field>
+                </CardBody>
+            </Card>
+        </Column>
+    </Row>
+</Validations>
